--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/botflux/pino-logfmt#readme",
   "devDependencies": {
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@types/chai": "^4.3.12",
     "@types/logfmt": "^1.2.6",
     "@types/mocha": "^10.0.6",
     "chai": "^4.4.1",
+    "husky": "^9.0.11",
     "mocha": "^10.3.0",
     "pino": "^8.19.0",
     "ts-mocha": "^10.0.0",
@@ -37,5 +40,8 @@
     "logfmt": "^1.4.0",
     "pino-abstract-transport": "^1.1.0",
     "sonic-boom": "^3.8.0"
+  },
+  "commitlint": {
+    "extends": [ "@commitlint/config-conventional" ]
   }
 }
