--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "dist/transport.js",
   "scripts": {
     "test": "ts-mocha --project tsconfig.test.json \"tests/**/*.spec.ts\"",
-    "prepare": "husky",
     "build": "tsc"
   },
   "repository": {
@@ -29,7 +28,7 @@
     "@types/logfmt": "^1.2.6",
     "@types/mocha": "^10.0.6",
     "chai": "^4.4.1",
-    "husky": "^9.0.11",
+    "husky": "^8.0.3",
     "mocha": "^10.3.0",
     "pino": "^8.19.0",
     "ts-mocha": "^10.0.0",
@@ -43,6 +42,8 @@
     "sonic-boom": "^3.8.0"
   },
   "commitlint": {
-    "extends": [ "@commitlint/config-conventional" ]
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
