build: setup a devcontainer using vscode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,8 @@
+// See https://containers.dev/implementors/json_reference/ for configuration reference
 {
-  image: "node:18"
+	"name": "pino-logfmt",
+	"build": {
+		"dockerfile": "Dockerfile"
+	},
+  "remoteUser": "node"
 }
