--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "TZ=Europe/Paris mocha \"tests/**/*.spec.js\"",
     "version": "commit-and-tag-version",
-    "lint": "standard --fix \"src/**/*.js\" \"tests/**/*.js\""
+    "lint": "standard --fix \"src/**/*.js\" \"tests/**/*.js\"",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
