--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "typings": "./typings/types.d.ts",
   "scripts": {
     "test": "TZ=Europe/Paris mocha \"tests/**/*.spec.js\"",
-    "version": "commit-and-tag-version",
     "lint": "standard --fix \"src/**/*.js\" \"tests/**/*.js\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -29,16 +29,17 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/chai": "^4.3.12",
     "@types/logfmt": "^1.2.6",
     "@types/mocha": "^10.0.6",
     "@types/pump": "^1.1.3",
     "chai": "^4.4.1",
-    "commit-and-tag-version": "^12.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "mocha": "^10.3.0",
     "pino": "^8.19.0",
+    "release-it": "^17.1.1",
     "standard": "^17.1.0",
     "ts-node": "^10.9.2",
     "typescript": "5.3"
@@ -64,5 +65,8 @@
     "tests/**/*.js": [
       "standard --fix"
     ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
