--- a/.release-it.json
+++ b/.release-it.json
@@ -15,7 +15,9 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular",
+      "preset": {
+        "name": "angular"
+      },
       "infile": "CHANGELOG.md"
     }
   }
