--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "TZ=Europe/Paris node --test tests/*.spec.js",
     "lint": "standard --fix \"src/**/*.js\" \"tests/**/*.js\"",
     "prepare": "husky install",
-    "release": "release-it"
+    "v": "npx @changesets/cli version && npx --no-install synclockver"
   },
   "repository": {
     "type": "git",
@@ -27,22 +27,19 @@
   "type": "module",
   "homepage": "https://github.com/botflux/pino-logfmt#readme",
   "devDependencies": {
-    "@commitlint/cli": "^19.0.3",
-    "@commitlint/config-conventional": "^19.0.3",
-    "@release-it/conventional-changelog": "^8.0.2",
+    "@changesets/cli": "^2.29.5",
     "@types/logfmt": "^1.2.6",
     "@types/pump": "^1.1.3",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.2",
     "pino": "^9.6.0",
-    "release-it": "^17.1.1",
     "standard": "^17.1.0",
+    "synclockver": "^1.0.3",
     "ts-node": "^10.9.2",
     "typescript": "5.3"
   },
   "dependencies": {
     "case-anything": "^2.1.13",
-
     "dateformat": "^5.0.3",
     "logfmt": "^1.4.0",
     "pino-abstract-transport": "^2.0.0",
