change the permissions to allow the ci to create a PR

--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -12,6 +12,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      pull-requests: write
+
     strategy:
       matrix:
         node-version: [20, 22, 24]
