--- a/package.json
+++ b/package.json
@@ -26,24 +26,24 @@
   "type": "module",
   "homepage": "https://github.com/botflux/pino-logfmt#readme",
   "devDependencies": {
-    "@changesets/cli": "^2.29.5",
-    "@types/logfmt": "^1.2.6",
-    "@types/pump": "^1.1.3",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.2",
-    "pino": "^10.1.0",
-    "standard": "^17.1.0",
-    "synclockver": "^1.0.3",
-    "ts-node": "^10.9.2",
+    "@changesets/cli": "2.29.8",
+    "@types/logfmt": "1.2.6",
+    "@types/pump": "1.1.3",
+    "husky": "8.0.3",
+    "lint-staged": "15.5.2",
+    "pino": "10.1.0",
+    "standard": "17.1.0",
+    "synclockver": "1.0.3",
+    "ts-node": "10.9.2",
     "typescript": "5.3"
   },
   "dependencies": {
-    "case-anything": "^2.1.13",
-    "dateformat": "^5.0.3",
-    "logfmt": "^1.4.0",
-    "pino-abstract-transport": "^2.0.0",
-    "pump": "^3.0.0",
-    "sonic-boom": "^3.8.0"
+    "case-anything": "2.1.13",
+    "dateformat": "5.0.3",
+    "logfmt": "1.4.0",
+    "pino-abstract-transport": "2.0.0",
+    "pump": "3.0.0",
+    "sonic-boom": "3.8.0"
   },
   "lint-staged": {
     "src/**/*.js": [
