--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -22,9 +22,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
@@ -32,7 +32,7 @@ jobs:
     - run: npm test
     - name: Create Release Pull Request
       if: ${{ matrix.node-version == '22' }}
-      uses: changesets/action@v1
+      uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba
       with:
         title: Prepare version update
         commit: "[release] update version"
