--- a/.github/workflows/on-main.yml
+++ b/.github/workflows/on-main.yml
@@ -32,6 +32,14 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test
+    
+
+    - name: Configure Git user
+      if: ${{ matrix.node-version == '22' }}
+      run: |
+        git config --global user.name 'GitHub Actions Bot'
+        git config --global user.email 'actions@github.com'
+
     - name: Create Release Pull Request
       if: ${{ matrix.node-version == '22' }}
       uses: changesets/action@e0145edc7d9d8679003495b11f87bd8ef63c0cba
@@ -41,6 +49,5 @@ jobs:
         version: npm run v
         publish: npm publish
         createGithubReleases: true
-        commitMode: github-api
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
